Many internal changes - Internal rewrite - changed save format of structure packages - added backwards compatible package loaders - Added new options to structure's config: iconPath and jigsawMaxDepth - Improved error splashes in package configuration GUI - Structures are saved in JSON files - Packages aren't saved per default -> added save button - Updated link to shrines wiki